# Himura-Pixel-Tools

./: .gitattributes  .gitignore  EXAMPLE_GENERATIONS.md  LICENSE  LIMITATIONS_QA.md  README.md  REPOS_AND_TECHNIQUES.md  build_launcher.bat
himura-pixel-tools/: .gitignore  MCP_SETUP.md  README.md  SETUP.BAT  START.BAT  plan
himura-pixel-tools/himura_pixel_tools/: __init__.py  characters.py  config.py  db.py  himura.bat  pyproject.toml  requirements.txt  setup.sh  setup_windows.ps1  start.sh  start_windows.ps1
himura-pixel-tools/himura_pixel_tools/api/: __init__.py  jobs.py  orchestrator.py  security.py  server.py
himura-pixel-tools/himura_pixel_tools/desktop/static/css/: app.css
himura-pixel-tools/himura_pixel_tools/desktop/static/js/: app.js
himura-pixel-tools/himura_pixel_tools/desktop/templates/: index.html
himura-pixel-tools/himura_pixel_tools/mcp/: __init__.py  server.py
himura-pixel-tools/himura_pixel_tools/pixel/: __init__.py  cleanup.py  dither.py  exporters.py  masks.py  palettes.py  pipeline.py  pixelate.py  segmentation.py  skeletons.py  snap.py  spritesheet.py  tiles.py  validate.py
himura-pixel-tools/himura_pixel_tools/runtime/: __init__.py  conditioning.py  download_models.py  external.py  model_loader.py  pipelines.py  registry.py
himura-pixel-tools/himura_pixel_tools/schemas/: __init__.py  characters.py  jobs.py  models.py  pixel.py
himura-pixel-tools/tests/: test_models_schemas.py  test_pixel.py  (+1 more)
tauri-launcher/: .gitignore  README.md
tauri-launcher/src-tauri/: Cargo.toml  tauri.conf.json
tauri-launcher/src-tauri/src/: main.rs
(+1 files in other folders)
